# XM_Tech_task

./: .dockerignore  .gitignore  README.MD  app.py  config.py  docker-compose.yaml  dockerfile  pyproject.toml  server_config.json
clients/postgress/: errors.py  helpers.py  postgres_client.py
helpers/: orders_business_logic.py
migrations/: alembic.ini
migrations/database/: env.py
models/config_models/: postgres_config.py
models/db_models/: orders.py
routes/: __init__.py  orders_route.py
scripts/: run_server.sh
tests/: conftest.py  run_tests_container.sh
tests/functional/: test_orders_creation.py
tests/orders_client/: client.py
tests/orders_client/models/: __init__.py
